<resources>
    <string name="app_name">x-sports</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_list">My List</string>
    <string name="training">Training</string>
    <string name="progress">Progress</string>
    <string name="explore">Explore</string>
    <string name="account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="please_log_in">Please log in</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="prerequisites">Prerequisites:</string>
    <string name="my_progress">My progress:</string>
    <string name="description">Description:</string>
    <string name="status">Status</string>
    <string name="next_trick">next trick</string>
    <string name="sport">Sport</string>
    <string name="registration">Registration</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="username">username</string>
    <string name="popup_text">Popup text</string>
    <string name="change_login_credentials">Change login credentials</string>
    <string name="change_user_info">Change user info</string>
    <string name="logout">Logout</string>
    <string name="user_name_and_surname">User name and surname</string>
    <string name="category">CATEGORY</string>
    <string name="count">count</string>
    <string name="learned">Learned</string>
    <string name="learning">Learning</string>
    <string name="my_sports">My Sports</string>
    <string name="sport_name">Sport Name</string>
    <string name="_0_0">0/0</string>
    <string name="categories">Categories</string>
</resources>