<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_list"
        android:icon="@drawable/ic_baseline_web_stories_24"
        android:title="@string/my_list"/>

    <item
        android:id="@+id/navigation_training"
        android:icon="@drawable/ic_baseline_skateboarding_24"
        android:title="@string/training" />

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/progress" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/explore" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/account" />

</menu>