<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_my_list">

    <fragment
        android:id="@+id/navigation_my_list"
        android:name="com.example.bk_xsports_app_v2.ui.main.myList.MyListFragment"
        android:label="@string/my_list"
        tools:layout="@layout/fragment_my_list" >
        <action
            android:id="@+id/action_navigation_my_list_to_categoryFragment"
            app:destination="@id/categoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.bk_xsports_app_v2.ui.main.training.TrainingFragment"
        android:label="@string/training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.bk_xsports_app_v2.ui.main.progress.ProgressFragment"
        android:label="@string/progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.bk_xsports_app_v2.ui.main.explore.ExploreFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_navigation_explore_to_categoryFragment"
            app:destination="@id/categoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.bk_xsports_app_v2.ui.main.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.bk_xsports_app_v2.ui.main.category.CategoryFragment"
        android:label="fragment_category"
        tools:layout="@layout/fragment_category" >
        <argument
            android:name="sportId"
            app:argType="integer" />
        <action
            android:id="@+id/action_categoryFragment_to_trickFragment"
            app:destination="@id/trickFragment" />
    </fragment>
    <fragment
        android:id="@+id/trickFragment"
        android:name="com.example.bk_xsports_app_v2.ui.main.trick.TrickFragment"
        android:label="fragment_trick"
        tools:layout="@layout/fragment_trick" >
        <argument
            android:name="categoryId"
            app:argType="integer" />
        <argument
            android:name="sportId"
            app:argType="integer" />
    </fragment>

</navigation>